Implement Employee management API with CRUD operations and database context setup

--- a/EmployeeAdminPortal/appsettings.json
+++ b/EmployeeAdminPortal/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWTSetting": {
+    "securityKey": "jkassjadkadhjkadshjkasdhjajkhds",
+    "ValidAudience": "http://localhost:4200",
+    "ValidIssuer": "http://localhost:5000",
+    "expireInMinutes": 60
+  }
 }
